--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.2",
     "react-syntax-highlighter": "^15.6.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
+    "sanitize-html": "^2.14.0",
     "tailwind-merge": "^2.2.1",
+    "turndown": "^7.2.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
