--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
-    "prettier": "^3.4.2",
+    "prettier": "3.5.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0",
